--- a/Geschichte.html
+++ b/Geschichte.html
@@ -20,7 +20,7 @@
   </header>
 
     <nav>
-        <a href="Index.html">Einführung</a>
+        <a href="index.html">Einführung</a>
         <a href="Geschichte.html">Geschichte</a>
         <a href="WichtigePersonen.html">Wichtige Personen</a>
       </nav> 
